_local_docs/logs-and-output/backend_error.txt

> zawadi-sms-backend@1.0.0 dev
> nodemon

[33m[nodemon] 3.1.11[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): src\**\*[39m
[33m[nodemon] watching extensions: ts[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
🔍 Validating environment variables...
✅ Environment validation passed

C:\Amalgamate\Projects\Zawadi SMS\server\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/routes/migration.routes.ts(10,28): error TS6133: 'req' is declared but its value is never read.
src/routes/migration.routes.ts(32,30): error TS6133: 'req' is declared but its value is never read.
src/routes/migration.routes.ts(67,37): error TS6133: 'req' is declared but its value is never read.

    at createTSError (C:\Amalgamate\Projects\Zawadi SMS\server\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Amalgamate\Projects\Zawadi SMS\server\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Amalgamate\Projects\Zawadi SMS\server\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Amalgamate\Projects\Zawadi SMS\server\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Amalgamate\Projects\Zawadi SMS\server\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1839:10
    at Object.require.extensions.<computed> [as .ts] (C:\Amalgamate\Projects\Zawadi SMS\server\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 6133, 6133, 6133 ]
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
🔍 Validating environment variables...
✅ Environment validation passed

C:\Amalgamate\Projects\Zawadi SMS\server\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/controllers/auth.controller.ts(4,1): error TS6133: 'User' is declared but its value is never read.
src/controllers/auth.controller.ts(10,77): error TS6133: 'passwordsMatch' is declared but its value is never read.
src/controllers/auth.controller.ts(283,16): error TS6133: 'req' is declared but its value is never read.

    at createTSError (C:\Amalgamate\Projects\Zawadi SMS\server\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Amalgamate\Projects\Zawadi SMS\server\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Amalgamate\Projects\Zawadi SMS\server\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Amalgamate\Projects\Zawadi SMS\server\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Amalgamate\Projects\Zawadi SMS\server\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1839:10
    at Object.require.extensions.<computed> [as .ts] (C:\Amalgamate\Projects\Zawadi SMS\server\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 6133, 6133, 6133 ]
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
^CTerminate batch job (Y/N)? 
^C